# ghpypideps

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
ghpypideps/: __init__.py  ghpypideps.py  source_finder.py
tests/: source_finder.py  test_ghpypideps.py
tests/results/: Flask.json  GitPython.json  Jinja2.json  Pillow.json  PyJWT.json  PyNaCl.json  PyYAML.json  Werkzeug.json  adal.json  aiohttp.json  aliyunsdkcore.json  asn1crypto.json  astor.json  astroid.json  async-timeout.json  attrs.json  azure-common.json  azure-storage-blob.json  bcrypt.json  bleach.json  boto.json  boto3.json  botocore.json  cachetools.json  chardet.json  click.json  colorama.json  configparser.json  coverage.json  cryptography.json  cycler.json  datadog.json  dill.json  django.json  docker.json  flake8.json  gevent.json  gitdb2.json  google-api-core.json  google-auth.json  (+77 more)
