[tool.poetry]
name = "ghpypideps"
version = "0.1.0"
description = ""
authors = ["Andrii Oriekhov <andriyorehov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
"github3.py" = "^3.2.0"
platformdirs = "^2.5.1"
python-slugify = "^6.1.1"
termcolor = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
